# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  configuration.yaml  crates.js  search-index.js  settings.html  source-files.js  spec.yaml  sqlx-data.json
.github/workflows/: general.yaml  general.yml  rustdoc.yaml  rustdoc.yml
app/: all.html  fn.main.html  index.html
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220418164639_add_status_to_subsciptions.sql  20220418173223_make_status_not_null_in_subscriptions.sql
scripts/: confirm_users_with_tokens.py  init_db.sh  useful_queries.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/app/: main.rs.html
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
src/zero2prod/: configuration.rs.html  email_client.rs.html  lib.rs.html  main.rs.html  startup.rs.html  telemetry.rs.html
static/: index.html
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/: all.html  fn.do_thing.html  fn.greet.html  fn.health_check.html  fn.main.html  fn.run.html  fn.subscribe.html  index.html  sidebar-items.js  struct.FormData.html
zero2prod/configuration/: enum.Environment.html  fn.get_configuration.html  index.html  sidebar-items.js  struct.ApplicationSettings.html  struct.DatabaseSettings.html  struct.EmailClientSettings.html  struct.LoggingSettings.html  struct.Settings.html
zero2prod/domain/: index.html  sidebar-items.js  struct.NewSubscriber.html  struct.SubscriberEmail.html  struct.SubscriberName.html
zero2prod/routes/: index.html  (+11 more)
(+52 files in other folders)
