[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
documentation = "https://davidweis.dev/zero2prod/zero2prod/"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
