[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
documentation = "https://davidweis.dev/zero2prod/zero2prod/"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"
